Fix bug with element jumping on hover scale

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -1,6 +1,6 @@
 @import '../../palette.scss';
 @mixin pulse($color, $scale, $opacity) {
-  border: 2px solid $color;
+  border: 1px solid $color;
   transform: scale($scale);
   transform-origin: center;
   opacity: $opacity;
@@ -14,6 +14,7 @@
   color: $main-orangered;
   position: relative;
   padding: 5px;
+  will-change: transform;
   &:before {
     content: '';
     position: absolute;
